crates/wasm-workers/src/workflow/snapshots/workflow_js_step_execution_until_finished@full_replay_1.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: "redact_component_digest(serde_json::to_value(&replay).unwrap())"
---
{
  "captured_writes": [
    {
      "Append": {
        "execution_id": "E_00000000000000000000000000",
        "version": 2,
        "req": {
          "created_at": "1970-01-01T00:00:00.100Z",
          "event": {
            "history_event": {
              "event": {
                "type": "join_set_create",
                "join_set_id": "g:1"
              }
            }
          }
        },
        "backtraces": []
      }
    },
    {
      "AppendBatchCreateNewExecution": {
        "current_time": "1970-01-01T00:00:00.100Z",
        "batch": [
          {
            "created_at": "1970-01-01T00:00:00.100Z",
            "event": {
              "history_event": {
                "event": {
                  "type": "join_set_request",
                  "join_set_id": "g:1",
                  "request": {
                    "type": "child_execution_request",
                    "child_execution_id": "E_00000000000000000000000000.g:1_1",
                    "target_ffqn": "testing:stub-activity/activity.foo",
                    "params_hash": "sha256:21a041d81e9674b5b8fba167170fdb0375220aa2325070ab8b91400197fb8b87",
                    "params": [
                      "test-input"
                    ],
                    "result": {
                      "Ok": null
                    }
                  }
                }
              }
            }
          }
        ],
        "execution_id": "E_00000000000000000000000000",
        "version": 3,
        "child_req": [
          {
            "created_at": "1970-01-01T00:00:00.100Z",
            "execution_id": "E_00000000000000000000000000.g:1_1",
            "ffqn": "testing:stub-activity/activity.foo",
            "params": [
              "test-input"
            ],
            "parent": [
              "E_00000000000000000000000000",
              "g:1"
            ],
            "scheduled_at": "1970-01-01T00:00:00.100Z",
            "component_id": {
              "component_type": "activity_stub",
              "name": "",
              "component_digest": "sha256:<REDACTED>"
            },
            "deployment_id": "Dep_00000000000000000000000000",
            "metadata": {},
            "scheduled_by": null,
            "paused": false,
            "max_persisted_value_size_bytes": 18446744073709551615
          }
        ],
        "backtraces": []
      }
    },
    {
      "AppendStubResponse": {
        "events": {
          "execution_id": "E_00000000000000000000000000.g:1_1",
          "version": 1,
          "batch": [
            {
              "created_at": "1970-01-01T00:00:00.100Z",
              "event": {
                "finished": {
                  "retval": {
                    "ok": {
                      "type": "string",
                      "value": "hello"
                    }
                  },
                  "http_client_traces": null
                }
              }
            }
          ]
        },
        "response": {
          "parent_execution_id": "E_00000000000000000000000000",
          "created_at": "1970-01-01T00:00:00.100Z",
          "join_set_id": "g:1",
          "child_execution_id": "E_00000000000000000000000000.g:1_1",
          "finished_version": 1,
          "result": {
            "ok": {
              "type": "string",
              "value": "hello"
            }
          }
        },
        "current_time": "1970-01-01T00:00:00.100Z",
        "backtraces": []
      }
    }
  ]
}
